# qml_dashboard

./: CMakeLists.txt  README.md  main.cpp
